@@ -675,6 +675,8 @@ Collection.prototype.find = function find () {
     options = args[2];
   }
 
+  // Ensure selector is not null
+  selector = selector == null ? {} : selector;
   // Validate correctness off the selector
   var object = selector;
   if(object instanceof Buffer) {
@@ -836,6 +838,8 @@ Collection.prototype.findOne = function findOne () {
     options = args[2];
   }
 
+  // Ensure selector is not null
+  selector = selector == null ? {} : selector;
   // Validate correctness off the selector
   var object = selector;
   if(object instanceof Buffer) {
